--- a/IDE/docker-compose.yaml
+++ b/IDE/docker-compose.yaml
@@ -16,8 +16,8 @@ services:
   server:
     image: jollaman999/cloud-cicd
     container_name: "ide"
-    networks:
-      - kind_network
+    # networks:
+    #   - kind_network
     environment:
       FILE__PASSWORD: /run/secrets/code-server-password
     env_file:
@@ -32,10 +32,10 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       - cloud-cicd-src:/code/cloud-cicd-src
       - vscode:/config
-networks:
-  kind_network:
-    name: kind
-    external: true
+# networks:
+#   kind_network:
+#     name: kind
+#     external: true
 
 volumes:
   cloud-cicd-src:
